fixing spacing

--- a/Challenge2/individualLists/dad/dad.css
+++ b/Challenge2/individualLists/dad/dad.css
@@ -136,6 +136,7 @@
     display: flex;
     flex-direction: column;
     min-height: fit-content;
+    padding: 12px 16px 12px 16px;
   
   }
   .giftsList li {
